--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ include CONTRIBUTING.rst
 include HISTORY.rst
 include LICENSE
 include README.rst
-recursive-include django_bootstrap_calendar *.html *.png *.gif *js *jpg *jpeg *svg *py *css
+recursive-include dj_calendar *.html *.png *.gif *js *jpg *jpeg *svg *py *css
