--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py26, py27, py33
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/django_bootstrap_calendar
+    PYTHONPATH = {toxinidir}:{toxinidir}/dj_calendar
 commands = python setup.py test
 deps =
     -r{toxinidir}/requirements.txt
